--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
   ],
   "rules": {
     "react/react-in-jsx-scope": 0,
-    "react-refresh/only-export-components": "warn"
+    "react-refresh/only-export-components": "warn",
+    "@typescript-eslint/no-misused-promises": 0
   },
   "settings": {
     "react": {
